refactor tests. tests pass. tests pass??